third_party/move/move-compiler-v2/tests/checking/positional_fields/invalid_anonymous_field3.exp

Diagnostics:
error: field `1` not declared in struct `S`
  ┌─ tests/checking/positional_fields/invalid_anonymous_field3.move:5:9
  │
5 │         x.1;
  │         ^
